minor notification changes

--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,9 @@
 {
-  "description": "Limit the number of tabs that can be opened",
-  "homepage_url": "https://github.com/gebirgsbaerbel/max-tabs-limit",
+  "description": "tablimit",
+  "homepage_url": "https://github.com/raidoh/max-tabs-limit-warning",
   "manifest_version": 2,
-  "name": "MaxTabsLimit",
-  "permissions": [
-    "tabs",
-    "notifications",
-    "storage"
-  ],
+  "name": "tablimit - fork of max-tab-limit",
+  "permissions": ["tabs", "notifications", "storage"],
   "background": {
     "scripts": ["background.js"]
   },
@@ -18,7 +14,7 @@
     "browser_style": true,
     "default_title": "Max Tabs Limit",
     "default_icon": {
-        "32": "tab.svg"
+      "32": "tab.svg"
     }
   },
   "version": "1.23",
